fix: project-content-right overflow on 720p screens.

--- a/src/assets/new-project/assets/css/responsive.css
+++ b/src/assets/new-project/assets/css/responsive.css
@@ -79,10 +79,12 @@
 @media (max-width: 720px) {
     .project-content-left {
         margin-left:0px;
+        width:300px;
     }
   
     .project-content-right {
         margin-left:15px;
+        width:300px;
 
     }
     
